db connection string update

--- a/FalknerCountyJuvenileCourt/appsettings.json
+++ b/FalknerCountyJuvenileCourt/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CourtContext": "Data Source=CourtContext-b60b2d0f-85c2-433a-ac14-41243ab6e0ed.db"
+    "CourtContext": "Data Source=CU.db"
   }
 }
