--- a/FalknerCountyJuvenileCourt/appsettings.json
+++ b/FalknerCountyJuvenileCourt/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=faulkner4-county4-group400-server.postgres.database.azure.com;Database=faulkner-county-group-database;Port=5432;Ssl Mode=Require;User Id=athbfjzuag;Password=0SI6DA7C7O701N61$;",
     "CourtContext": "Data Source=CU.db",
     "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-aa99668e-cc58-49cf-888a-0a15425d77c4;Trusted_Connection=True;MultipleActiveResultSets=true",
     "FalknerCountyJuvenileCourtIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FalknerCountyJuvenileCourt;Trusted_Connection=True;MultipleActiveResultSets=true"
