Configure DB & Redis & add migration bundle

--- a/FalknerCountyJuvenileCourt/appsettings.json
+++ b/FalknerCountyJuvenileCourt/appsettings.json
@@ -10,7 +10,7 @@
   "ConnectionStrings": {
     "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:falkner-server.database.windows.net,1433;Initial Catalog=Falkner-database;Persist Security Info=False;User ID=moussa;Password=Hayden100;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "CourtContext": "Data Source=CU.db",
-    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-aa99668e-cc58-49cf-888a-0a15425d77c4;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "FalknerCountyJuvenileCourtIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FalknerCountyJuvenileCourt;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SchoolContext": "Server=(localdb)//mssqllocaldb;Database=SchoolContext-aa99668e-cc58-49cf-888a-0a15425d77c4;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "FalknerCountyJuvenileCourtIdentityDbContextConnection": "Server=(localdb)//mssqllocaldb;Database=FalknerCountyJuvenileCourt;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
